syntax = "proto3";
package gauss.token;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/gauss/gauss/v4/x/token/types";
option (gogoproto.goproto_getters_all) = false;

// Token defines a standard for the fungible token
message Token {
    option (gogoproto.goproto_stringer) = false;

    string name = 1;
    string symbol = 2;
    string smallest_unit = 3;
    uint32 decimals = 4;
    uint64 initial_supply = 5 [ (gogoproto.moretags) = "yaml:\"initial_supply\"" ];
    uint64 total_supply = 6 [ (gogoproto.moretags) = "yaml:\"total_supply\"" ];
    bool mintable = 7;
    string owner = 8;
}

// Params defines token module's parameters
message Params {
    option (gogoproto.equal) = true;
    option (gogoproto.goproto_stringer) = false;

    string token_tax = 1 
	[ (gogoproto.moretags) = "yaml:\"token_tax\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false ];

    cosmos.base.v1beta1.Coin issue_fee = 2 
	[ (gogoproto.moretags) = "yaml:\"issue_fee\"", (gogoproto.nullable) = false ];

    string mint_fee_ratio = 3 
	[ (gogoproto.moretags) = "yaml:\"mint_fee_ratio\"", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false ];
}
